k8s/blueprints/kratos-admin-ui/ciliumnetworkpolicy.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kratos-admin-ui
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/instance: kratos-admin-ui
      k8s:app.kubernetes.io/name: kratos-admin-ui
      k8s:io.cilium.k8s.namespace.labels.app.kubernetes.io/instance: kratos-admin-ui
      k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kratos-admin-ui
      k8s:io.kubernetes.pod.namespace: kratos-admin-ui
  ingress:
    - fromEndpoints:
        - matchExpressions:
            - key: k8s:io.kubernetes.pod.namespace
              operator: In
              values:
                - auth
            - key: k8s:app.kubernetes.io/name
              operator: In
              values:
                - oathkeeper
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http: [{}]
